--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -2,8 +2,8 @@
 <ContentPage 
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:pap.Database"
-    x:DataType="local:Users"
+    xmlns:local="clr-namespace:pap.Model"
+    x:DataType="local:User"
     x:Class="pap.MainPage"
     BackgroundColor="#1A202C">
 
@@ -264,7 +264,7 @@ Margin="10">
                      FontSize="18"
                      TextColor="White"
                      FontAttributes="Bold"/>
-                                        <Label Text="{Binding Email}"
+                                        <Label Text="{Binding Gender}"
                      FontSize="14"
                      TextColor="#A0AEC0"/>
                                     </VerticalStackLayout>
