--- a/Pages/AndroidPage.xaml
+++ b/Pages/AndroidPage.xaml
@@ -13,7 +13,7 @@
 
                     <!-- Barra Superior (AppBar) -->
                     <Grid Grid.Row="0" ColumnDefinitions="*,Auto">
-                        <Label Text="Stress Whasch" 
+                        <Label Text="Stress Watch" 
             FontSize="24" 
             FontAttributes="Bold" 
             TextColor="White" 
@@ -37,13 +37,7 @@
             WidthRequest="24" 
             HeightRequest="24" 
             VerticalOptions="Center"/>
-                        <Label Text="Sinais vitais" 
-            Grid.Column="1" 
-            FontSize="20" 
-            FontAttributes="Bold" 
-            TextColor="White" 
-            Margin="10,0,0,0" 
-            VerticalOptions="Center"/>
+                       
                     </Grid>
 
                     <!-- Grade de Informações (Grid com 2 colunas e 2 linhas) -->
@@ -183,9 +177,10 @@
                     <Grid Grid.Row="4" ColumnDefinitions="*,*" ColumnSpacing="10">
                         <Button Text="Actualizar" 
                              BackgroundColor="#333333" 
+                             Clicked="btnActualizar_Clicked"
                              TextColor="White" 
                              CornerRadius="5"/>
-                        <Button Text="Coneção" 
+                        <Button Text="Conexão" 
                              Clicked="btnConecao_Clicked"
                              Grid.Column="1" 
                              BackgroundColor="#333333" 
@@ -229,12 +224,23 @@
 
                     <!-- Botão Conectar -->
                     <Button Text="Conectar"
+                        x:Name="btnConectar"
                         TextColor="White"
                         FontSize="20"
                         BackgroundColor="#03DAC6"
                         CornerRadius="10"
                         Padding="10"
                         Clicked="OnConnectClicked"/>
+
+                    <Button Text="Desconectar"
+                         IsVisible="False"
+                         x:Name="btnDesconectar"
+                         TextColor="Red"
+                         FontSize="20"
+                         BackgroundColor="Transparent"
+                         CornerRadius="10"
+                         Padding="10"
+                         Clicked="OffConnectClicked"/>
 
                     <!-- Botão Conectar -->
                     <Button x:Name="btnBack"
